poke/testsuite/poke.pkl/optcond-1-diag.pk
/* { dg-do compile } */

deftype Foo = struct { int i if "bar"; }; /* { dg-error "expected boolean" } */
